Update comments, override methods etc